[gd_scene load_steps=4 format=2]

[ext_resource path="res://Examples/ThreeOptions/ThreeOptions.gd" type="Script" id=1]
[ext_resource path="res://addons/QuizNodes/QuizMultipleChoice.gd" type="Script" id=2]
[ext_resource path="res://addons/QuizNodes/QuizMultipleChoice_old.png" type="Texture" id=3]







[node name="ThreeOptions" type="Node"]
script = ExtResource( 1 )

[node name="Question" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 70.0
align = 1
valign = 1

[node name="Answer" type="Label" parent="."]
margin_top = 70.0
margin_right = 512.0
margin_bottom = 140.0
align = 1
valign = 1

[node name="Option1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = 10.0
margin_right = 205.0
margin_bottom = 40.0

[node name="Option2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = 50.0
margin_right = 205.0
margin_bottom = 80.0

[node name="Option3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = 90.0
margin_right = 205.0
margin_bottom = 120.0

[node name="ThreeOptions" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
debug = true
type = 2
[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
